# anti_momo_bot

./: Cargo.toml  README.md
locales/: en.yml  zh-hans.yml
src/: cache.rs  defs.rs  handler.rs  img.rs  main.rs  momo.rs
